--- a/Introduction-to-pandas.ipynb
+++ b/Introduction-to-pandas.ipynb
@@ -428,7 +428,7 @@
     }
    ],
    "source": [
-    "# Get infromation about DataFrame\n",
+    "# Get information about DataFrame\n",
     "data.info()"
    ]
   },
@@ -905,7 +905,7 @@
     }
    ],
    "source": [
-    "# Use .iLox to select the row at position 3 of the dataFrame\n",
+    "# Use .iLoc to select the row at position 3 of the dataFrame\n",
     "# NOTE: iLoc refers to position\n",
     "row_iloc=data.iloc[3]\n",
     "row_iloc"
@@ -913,8 +913,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "8df71614",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    150043\n",
+       "1     87899\n",
+       "2     32549\n",
+       "3     11179\n",
+       "4    213095\n",
+       "5     99213\n",
+       "6     45698\n",
+       "7     54738\n",
+       "8     60000\n",
+       "9     31600\n",
+       "Name: Odometer (KM), dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Select the \"Odometer (KM)\" column from the car sales DataFrame\n",
+    "Odometer=data[\"Odometer (KM)\"]\n",
+    "Odometer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b201ad3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78601.4"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the mean of the \"Odometer (KM)\" column in the car sales DataFrame\n",
+    "mean_of_Odometer=Odometer.mean()\n",
+    "mean_of_Odometer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "021bd1ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Colour</th>\n",
+       "      <th>Odometer (KM)</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>150043</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$4,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>White</td>\n",
+       "      <td>213095</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$3,500.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Make Colour  Odometer (KM)  Doors      Price\n",
+       "0  Toyota  White         150043      4  $4,000.00\n",
+       "4  Nissan  White         213095      4  $3,500.00"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Select the rows with over 100,000 kilometers on the Odometer\n",
+    "data[data[\"Odometer (KM)\"]>100000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "051ee514",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d950371",
    "metadata": {},
    "outputs": [],
    "source": []
